--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "framer-motion": "^11.3.17",
     "postcss": "^8",
+    "react-icons": "^5.2.1",
+    "swiper": "^11.1.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
